# ComputationalGeometry

ComputationalGeometry/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
ComputationalGeometry/CustomQt/: CustomGraphicsScene.cpp  CustomGraphicsScene.h  CustomGraphicsView.cpp  CustomGraphicsView.h  LineListModel.cpp  LineListModel.h  PointListModel.cpp  PointListModel.h
ComputationalGeometry/Dialogs/: AddLineDialog.cpp  AddLineDialog.h  AddLineDialog.ui  AddPointDialog.cpp  AddPointDialog.h  AddPointDialog.ui
ComputationalGeometry/Utils/: LineList.cpp  LineList.h  PointList.cpp  PointList.h
report/: CG_Report.tex
tests/: simple.txt  simple2.txt  simple3.txt
